--- a/index.html
+++ b/index.html
@@ -121,36 +121,36 @@
             <div><button class="add-button" onclick="addTask()" value="000">Add Todo</button></div>
         </div>
         <div id="taskList">
-            <!-- <div class="task-list completed">
-                <div id="task"><input type="checkbox"><span>${taskInput.value}</span></div>
+             <div class="task-list completed">
+                <div id="task"><input type="checkbox"><span>吃饭</span></div>
                 <button class="task-del" onclick="removeTask(this)">
                     <h3>del</h3>
                 </button>
             </div>
             <div class="task-list ">
-                <div><input type="checkbox" onclick="com(this)"><span>${taskInput.value}</span></div>
+                <div><input type="checkbox" onclick="com(this)"><span>睡觉</span></div>
                 <button class="task-del" onclick="removeTask(this)">
                     <h3>del</h3>
                 </button>
-            </div> -->
+            </div>
         </div>
     </div>
     <div>
         <h2>表单标题</h2>
         <table>
             <tr>
-                <th>标题1</th>
-                <th>标题2</th>
-                <th>标题3</th>
-                <th>标题4</th>
-                <th>标题5</th>
+                <th>星期一</th>
+                <th>星期二</th>
+                <th>星期三</th>
+                <th>星期四</th>
+                <th>星期五</th>
             </tr>
             <tr>
-                <td>表格1</td>
-                <td>表格2</td>
-                <td>表格3</td>
-                <td>表格4</td>
-                <td>表格5</td>
+                <td>没课</td>
+                <td>没课</td>
+                <td>没课</td>
+                <td>没课</td>
+                <td>没课</td>
             </tr>
         </table>
     </div>
