--- a/index.html
+++ b/index.html
@@ -136,57 +136,55 @@
         </div>
     </div>
     <div>
-        <h2>课程表</h2>
+        <h2>小胜的垃圾课程表</h2>
         <table>
             <tr>
-                <th>节次</th>
-                <th>时间</th>
-                <th>星期一</th>
-                <th>星期二</th>
-                <th>星期三</th>
-                <th>星期四</th>
-                <th>星期五</th>
+                <th>周次</th>
+                <th>第一节8:30-10:00</th>
+                <th>第二节10:20-11:50</th>
+                <th>第三节14:00-14:40</th>
+                <th>第四节15:50-17:20</th>
+                <th>第五节18:30-20:00</th>
             </tr>
             <tr>
-                <td>第一节</td>
-                <td>8:30-10:00</td>
+                <td>星期一</td>
                 <td></td>
+                <td></td>
+                <td></td>
+                <td>高等数学F216</td>
+                <td>大学英语H114</td>
+            </tr>
+            <tr>
+                <td>星期二</td>
                 <td>电子技术E426</td>
                 <td></td>
-                <td>中国近代史H108</td>
-                <td>电子技术H102</td>
-            </tr>
-            <tr>
-                <td>第二节</td>
-                <td>10:20-11:50</td>
-                <td></td>
-                <td></td>
-                <td>心里健康F222</td>
-                <td>高等数学F416</td>
-                <td>程序设计E319</td>
-            </tr>
-            <tr>
-                <td>第三节</td>
-                <td>14:00-14:40</td>
-                <td></td>
                 <td>大学英语H116</td>
+                <td></td>
+                <td></td>
+                
+            </tr>
+            <tr>
+                <td>星期三</td>
+                <td></td>
+                <td>心理健康教育F222</td>
                 <td>大学体育4</td>
                 <td></td>
-            </tr>
-            <tr>
-                <td>第四节</td>
-                <td>15:50-17:20</td>
-                <td>高等数学F216</td>
-                <td></td>
-                <td>程序设计E509</td>
                 <td></td>
             </tr>
             <tr>
-                <td>第五节</td>
-                <td>18:30-20:00</td>
-                <td>大学英语H114</td>
+                <td>星期四</td>
+                <td>中国历史H108</td>
+                <td>高等数学F416</td>
                 <td></td>
-                <td>物联网导论F416</td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>星期五</td>
+                <td>电子技术H102</td>
+                <td>程序设计E319</td>
+                <td></td>
+                <td></td>
                 <td></td>
             </tr>
         </table>
